--- a/webapp/webapp-data/src/main/resources/application.properties
+++ b/webapp/webapp-data/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=webapp-data
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/webappdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
